--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Me, Setting Sails<% if content_for?(:title) %> – <%= yield(:title) %><% end %></title>
+  <meta name="viewport" content="width=350" />
   <%= stylesheet_link_tag 'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
