--- a/app/assets/stylesheets/mixins.css.scss
+++ b/app/assets/stylesheets/mixins.css.scss
@@ -1,3 +1,13 @@
+@mixin vendor-specific($property, $value) {
+	@each $vendor in moz, webkit, o, ms {
+		-#{$vendor}-#{$property}: $value;
+	}
+}
+
+@mixin transition($property, $duration, $ease: "") {
+	@include vendor-specific(transition, $property $duration #{$ease});
+}
+
 @mixin font-face($name) {
 	@font-face {
 		font-family: "#{$name}";
